implement title and note

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
   <div class="wrapper">
     <div class="kanban">
       <div class="title">
-        <div class="title1">Google Protobuf</div>
-        <div class="title2">Deserializer</div>
+        <div class="title1">Norn</div>
+        <div class="title2">Minehunter</div>
       </div>
       <div class="note">
-        <span>Support to deserialize the protobuf data to pretty json display. (Note: your .proto files will be sent to the backend server to generate proto.js library, and then the browser will use this proto.js library to deserialize your pb data, your pb data will not be sent to backend server)</span>
-        <span class="sample-file"><a href="./sample.zip">Download sample file</a></span>
+        <span>Do you want to know the stocks which you hold are Treasure or Bomb? Norn-Minehunter can help you to scan the stock financial data to inspect the company's financial health.</span>
+        <span>Would you like to share your tactics with everyone? Feel free to contact me: <a href="mailto:zmcx16.gmail.com">zmcx16.gmail.com</a></span>
       </div>
     </div>
     <div class="prepare-data">
