implement web page

--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
       <div id="tactics-console">
         <div id="tactics-content-description" class="span-large">test test test test test test test test test test test test test test test test test test test test test test test test test test test test</div>
         <div id="tactics-args">
-          <div class="tactics-arg-text"><span class="span-x-large text-right">xxx:</span></div>
+          <div class="tactics-arg-text"><span class="span-large text-right">xxx:</span></div>
           <div></div>
           <input type="text" id="tactics-arg-val-1" name="tactics-arg-val-1">
           <div></div>
-          <div class="tactics-arg-text"><span class="span-x-large text-right">xxx:</span></div>
+          <div class="tactics-arg-text"><span class="span-large text-right">xxx:</span></div>
           <div></div>
           <input type="text" id="tactics-arg-val-2" name="tactics-arg-val-2">
           <div></div>
-          <div class="tactics-arg-text"><span class="span-x-large text-right">xxx:</span></div>
+          <div class="tactics-arg-text"><span class="span-large text-right">xxx:</span></div>
           <div></div>
           <input type="text" id="tactics-arg-val-3" name="tactics-arg-val-3">
           <div></div>
-          <div class="tactics-arg-text"><span class="span-x-large text-right">xxx:</span></div>
+          <div class="tactics-arg-text"><span class="span-large text-right">xxx:</span></div>
           <div></div>
           <input type="text" id="tactics-arg-val-4" name="tactics-arg-val-4">
           <div></div>
-          <div class="tactics-arg-text"><span class="span-x-large text-right">xxx:</span></div>
+          <div class="tactics-arg-text"><span class="span-large text-right">xxx:</span></div>
           <div></div>
           <input type="text" id="tactics-arg-val-5" name="tactics-arg-val-5">
           <div></div>
-          <div class="tactics-arg-text"><span class="span-x-large text-right">xxx:</span></div>
+          <div class="tactics-arg-text"><span class="span-large text-right">xxx:</span></div>
           <div></div>
           <input type="text" id="tactics-arg-val-6" name="tactics-arg-val-6">
           <div></div>
