add type in table

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       <div id="tactics-console">
         <div id="tactics-content-description" class="span-large">test test test test test test test test test test test test test test test test test test test test test test test test test test test test</div>
         <div id="tactics-args">
+          <div class="tactics-arg-text"><span class="span-large text-right">Name:</span></div>
+          <div></div>
+          <input type="text" id="tactics-arg-val-name" name="tactics-arg-val-name">
+          <div></div>
           <div class="tactics-arg-text"><span class="span-large text-right">xxx:</span></div>
           <div></div>
           <input type="text" id="tactics-arg-val-1" name="tactics-arg-val-1">
@@ -82,12 +86,14 @@
         <table id="tactics-table">
           <thead>
             <th id="th-name" class="span-large">Name</th>
+            <th id="th-type" class="span-large">Type</th>
             <th id="th-parameter" class="span-large">Parameter</th>
             <th id="th-del" class="span-large">Del</th>
           </thead>
           <tbody id="tactics-tbody">
             <tr class="tactics-tr">
               <td class="name-td">Tactics1</td>
+              <td class="type-td">PeterLynch_v1</td>
               <td class="parameter-td">zdasdsadasdasdasdasdsdsadsadsadsadd</td>
               <td><span class="remove"><button type="button" class="close remove-tactic"><span>&times;</span></button></span></td>
             </tr>
@@ -125,7 +131,7 @@
     <div class="footer-page">
       <div class="relate-links">
         <div class="relate-links-title">Relate Links:</div>
-        <a class="relate-link" target="_blank" href="https://github.com/zmcx16/protobuf-deserializer/">protobuf-deserializer Github</a>
+        <a class="relate-link" target="_blank" href="https://github.com/zmcx16/stock-minehunter/">Norn-Minehunter Github</a>
         <a class="relate-link" target="_blank" href="https://project.zmcx16.moe/">zmcx16's Side Projects</a>
         <a class="relate-link" target="_blank" href="https://blog.zmcx16.moe/">zmcx16's Blog</a>
       </div>
