add scan button

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
           </tbody>
         </table>
       </div>
+      <div id="ctrl-table-pannel">
+        <div class="shield"><img class="shield-img" src="./image/shield.png"></div>
+        <button id="scan-button" type="button" class="click-btn-v2">Scan</button>
+        <div class="shield"><img class="shield-img" src="./image/shield.png"></div>
+      </div>
     </div>
     <div id="display-page">
       <fieldset class="scan-block scan-group">
