implement online website

--- a/index.html
+++ b/index.html
@@ -82,29 +82,8 @@
     </div>
     <div id="display-page">
       <fieldset class="scan-block scan-group">
-        <legend class="scan-block">Scan Results</legend>
-        <div class="scan-output">
-          <div class="output-stage1">
-            <div class="output-norn-image"><img src="./image/norn.png"></div>
-            <div class="output-info1">
-              <span class="span-xx-large output-name">Tactic1</span>
-              <div class="output-info1-baseinfo">
-                <div class="base-data"><span class="span-large">ROE:</span><span class="span-large base-data-value">15%</span></div><div></div>
-                <div class="base-data"><span class="span-large">ROE:</span><span class="span-large base-data-value">15%</span></div><div></div>
-                <div class="base-data"><span class="span-large">ROE:</span><span class="span-large base-data-value">15%</span></div><div></div>
-                <div class="base-data"><span class="span-large">ROE:</span><span class="span-large base-data-value">15%</span></div><div></div>
-                <div class="base-data"><span class="span-large">ROE:</span><span class="span-large base-data-value">15%</span></div><div></div>
-                <div class="base-data"><span class="span-large">ROE:</span><span class="span-large base-data-value">15%</span></div><div></div>
-                <div class="base-data"><span class="span-large">ROE:</span><span class="span-large base-data-value">15%</span></div><div></div>
-              </div>
-            </div>
-            <div class="output-info2">
-              <div><img class="bomb-icon" src="./image/bomb.png"></div>
-              <div class="span-x-large bomb-rate">78%</div>
-            </div>
-          </div>
-          <div class="output-stage2">yyy</div>
-        </div>
+        <legend class="scan-block">Scan Reports</legend>
+        <div id="scan-output-container"></div>
       </fieldset>
     </div>
     <div class="footer-page">
