fix mobile windows size

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="guard-elf"><img class="guard-elf-img" src="./image/elf/image_1_4.png"></div>
       </div>
     </div>
-    <div id="display-page" style="display:none;">
+    <div id="display-page">
       <fieldset class="scan-block scan-group">
         <legend class="scan-block">Scan Reports</legend>
         <div id="scan-output-container"></div>
