update website description

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="publisher" content="https://norn-minehunter.zmcx16.moe">
   <meta name="url" content="https://norn-minehunter.zmcx16.moe">
   <meta name="title" content="norn-minehunter">
-  <meta name="description" content="A website which scan the stock financial data to inspect the company's financial health.">
+  <meta name="description" content="A website which scan the stock financial & technical data to inspect the company's financial health & trend.">
   <meta name="keywords" content="stock, financial health, stock health check">
   <meta property="og:site_name" content="norn-minehunter.zmcx16.moe">
   <meta property="og:title" content="norn-minehunter">
-  <meta property="og:description" content="A website which scan the stock financial data to inspect the company's financial health.">
+  <meta property="og:description" content="A website which scan the stock financial & technical data to inspect the company's financial health & trend.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://norn-minehunter.zmcx16.moe">
   <!---<meta property="og:image" content="https://i.imgur.com/4JGAgC4.png">-->
@@ -32,7 +32,7 @@
         <div class="title2">Minehunter</div>
       </div>
       <div class="note">
-        <span>Do you want to know the stocks which you hold are Treasure or Bomb? Norn-Minehunter can help you to scan the stock financial data to inspect the company's financial health.</span>
+        <span>Do you want to know the stocks which you hold are Treasure or Bomb? Norn-Minehunter can help you to scan the stock financial & technical data to inspect the company's financial health & trend.</span>
         <span>Would you like to share your tactics with everyone? Feel free to contact me: <a href="mailto:zmcx16.gmail.com">zmcx16.gmail.com</a></span>
       </div>
     </div>
