--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./loading/loading.js"></script>
   <script src="./js/app.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148957524-4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-148957524-4');
+  </script>
 </head>
 <body>
   <div class="wrapper-0">
