add bomb images

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </select>
         <div><span class="span-large text-right">Select the scan tactic and input stocks' symbol:</span></div>
         <div></div>
-        <input type="text" id="add-symbol-input" placeholder=" T, GOOG, AAPL" name="input-symbols">
+        <input type="text" id="add-symbol-input" placeholder=" T, AMZN, AAPL" name="input-symbols">
       </div>
       <div id="tactics-console">
         <div id="tactics-content-description" class="span"></div>
