add meta image property

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="A website which scan the stock financial & technical data to inspect the company's financial health & trend.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://norn-minehunter.zmcx16.moe">
-  <!---<meta property="og:image" content="https://i.imgur.com/4JGAgC4.png">-->
+  <meta property="og:image" content="https://i.imgur.com/5KP7Bhm.png">
   <title>Norn-Minehunter</title>
   <link href="./css/bootstrap.min.css" rel="stylesheet">
   <link href="./css/common.css" rel="stylesheet">
